Min height to fix spacing of ingredviews

--- a/src/components/styles/IngredView.less
+++ b/src/components/styles/IngredView.less
@@ -4,9 +4,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: -webkit-min-content;
-  min-height: -moz-min-content;
-  min-height: min-content;
+  min-height: 88px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
